--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,6 @@
 markdown: kramdown
-theme: slate
+remote_theme: pages-themes/slate@v0.2.0
+plugins:
+  - jekyll-remote-theme
+title: CP Course Level 1
+description: Learn Competitive Programming
