--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,4 @@
 markdown: kramdown
-remote_theme: pages-themes/slate@v0.2.0
-plugins:
-  - jekyll-remote-theme
+theme: minima
 title: CP Course Level 1
 description: Learn Competitive Programming
