--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,13 @@
 markdown: kramdown
-remote_theme: "mmistakes/minimal-mistakes"
 title: CP Course Level 1
 description: Learn Competitive Programming
+theme: null
+remote_theme: mmistakes/minimal-mistakes
+plugins:
+  - jekyll-include-cache
+  - jekyll-seo-tag
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-feed
+  - jekyll-archives
+  - jekyll-remote-theme
