--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 title: CP Course Level 1
-description: A competitive programming starter course
+description: "A starter course in competitive programming"
 theme: minima
 markdown: kramdown
-permalink: pretty
 
 url: "https://okhalifa-official.github.io"
 baseurl: "/CP_Course.Lv1"
 
-# Optional (helps avoid 404s when clicking posts)
+permalink: pretty
+
 plugins:
   - jekyll-feed
